remctl (3.8-3) UNRELEASED; urgency=medium

  * Build-Depend on the version of gem2deb with working multi-binary
    package support for native extensions.

 -- Russ Allbery <rra@debian.org>  Fri, 11 Apr 2014 13:18:00 -0700

remctl (3.8-2) unstable; urgency=medium

  * Add upstream patch to increase the buffer size on timeout tests.
    Linux has apparently increased the size of network writes it is
    willing to buffer internally, so we now have to write more data to
    force a timeout.  (Closes: #743991)
  * Use gem2deb to build and install the Ruby module.  This will
    automatically use the current supported Ruby versions, avoiding the
    need for sourceful uploads for new Ruby releases.  Thanks to Christian
    Hofstaedtler for the patch.
  * Remove now-unneeded Lintian override for the upstream signing key.
  * Add a Lintian override for the dual-licensed protocol specification.

 -- Russ Allbery <rra@debian.org>  Tue, 08 Apr 2014 19:34:24 -0700

remctl (3.8-1) unstable; urgency=medium

  * New upstream release.
    - remctld now uses libevent for the process event loop, which removes
      the need to poll for child exit and will make the server faster and
      more responsive.
    - Fill each MESSAGE_OUTPUT message from the server with the maximum
      allowed data per the protocol, rather than capping it artificially
      at 65000 octets.
    - Fix a minor server memory leak when processing help commands.
    - Fix a minor client memory leak on errors with protocol one commands.
    - Write out the server PID file atomically.
  * Start building the Ruby extension for Ruby 2.0 and stop building it
    for Ruby 1.8, which is being removed.  (Closes: #735659)
  * Add Depends on ruby | ruby-interpreter to ruby-remctl.  This is
    apparently standard for Ruby extensions, since it will pull in a
    version of Ruby that can use the extension if the Ruby versions of the
    extension match the providers of ruby-interpreter.